--- a/android/SherpaOnnx/app/src/main/res/values/strings.xml
+++ b/android/SherpaOnnx/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     </string>
     <string name="start">Start</string>
     <string name="stop">Stop</string>
+    <string name="copy">复制</string>
 </resources>
